--- a/public/js-window.html
+++ b/public/js-window.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Delayed Autosave</title>
+    <script src="/js/jquery.js"></script>
 </head>
 <body>
 
@@ -31,8 +32,10 @@
         // this causes the autosave function to be called whenever
         // a key up event occurs in the textarea
         // we will learn about events in the DOM lessons
-        var textarea = document.getElementById('important');
-        textarea.addEventListener('keyup', autosave, false);
+        // var textarea = document.getElementById('important');
+        // textarea.addEventListener('keyup', autosave, false);
+
+        $('#important').on('keyup', autosave);
 
     </script>
 
