--- a/public/whack.html
+++ b/public/whack.html
@@ -18,18 +18,15 @@
 <body>
 	<h1>Whack - A - Something</h1>
 
-	<div class="container">
-
-		<div class="scorebox" id="highscore">High Score<script>hit</script></div>
-
-		<div class="scorebox" id="score">Score</div>
-
-		<div class="scorebox" id="hits">Hits</div>
-
-		<div class="scorebox" id="misses">Misses</div>
-
-	</div>
 	<div id="buttonDiv">
+		<h3>High Score</h3>
+		<div class="scorebox" id="highscore">0</div>
+		<h3>Score</h3>
+		<div class="scorebox" id="score">0</div>
+		<h3>Hits</h3>
+		<div class="scorebox" id="hits">0</div>
+		<h3>Misses</h3>
+		<div class="scorebox" id="misses">0</div>
 		<button onclick="startGame()">Start New Game</button>
  	</div>
  	<div class="gameboard">
@@ -84,7 +81,11 @@
 
 		$('img').click(function(){
 			$(this).hide();
-			hits = (hits + 1);
+			hits = (hits + 1);			
+			$('#hits').html(hits);
+			score = (score + 100);
+			$('#score').html(score);
+			
 		});
 
 		function gamePlay(){
@@ -93,8 +94,15 @@
 			var rand = Math.floor(Math.random() * holes.length);
 			$(holes).children().fadeOut();
 			$(holes[rand]).children().fadeIn();
-			
-		};
+			count = (count + 1);
+			if (count == hits){
+				misses = misses;
+			} else if (count > hits){
+				misses = (misses + 1);
+			}
+			$('misses').html(misses);
+				
+			};
 
 		// set a game duration interval
 		function startGame(){
@@ -107,39 +115,34 @@
 			clearInterval(gameTime);
 		}
 
-		// adjust player level based on number of hits
-		if (hits == 10){
-			level = 2;
-		} else if (hits == 15){
-			level = 3;
-		} else if (hits == 20){
-			level = 4;
-		} else if (hits == 25){
-			level = 5;
-		}
-
-		// adjust reflex time based on level
-		if (level == 2){
-			time = 1200;
-		} else if (level == 3){
-			time = 900;
-		} else if (level == 4){
-			time = 700;
-		} else if (level > 5){
-			time = 400;
-		}
 
 		
 
-// get the hits info by id
-var hits = document.getElementById('hits');
+		// adjust player level based on number of hits
+		// if (hits == 10){
+		// 	level = 2;
+		// } else if (hits == 15){
+		// 	level = 3;
+		// } else if (hits == 20){
+		// 	level = 4;
+		// } else if (hits == 25){
+		// 	level = 5;
+		// }
 
-console.log(hits.innerHTML); 
+		// adjust reflex time based on level
+		// if (level == 2){
+		// 	time = 1200;
+		// } else if (level == 3){
+		// 	time = 900;
+		// } else if (level == 4){
+		// 	time = 700;
+		// } else if (level > 5){
+		// 	time = 400;
+		// }
 
-// assign a new value to the inner HTML 
-hits.innerHTML = hits.value;
+		
 
-console.log(hits.innerHTML); 
+
 
 
 
