--- a/public/whack.html
+++ b/public/whack.html
@@ -16,13 +16,18 @@
 </head>
 <!-- NAVBAR ============================================================================ -->
 <body>
+	<div id="background">
 	<h1>Guac - a - mole</h1>
 
 	<div id="buttonDiv">
+		<h3>Time:</h3>
+		<div id="clock">0</div>
 		<h3>High Score</h3>
 		<div class="scorebox" id="highscore">0</div>
 		<h3>Score</h3>
 		<div class="scorebox" id="score">0</div>
+		<h3>Level</h3>
+		<div class="scorebox" id="level">0</div>
 		<h3>Hits</h3>
 		<div class="scorebox" id="hits">0</div>
 		<h3>Misses</h3>
@@ -30,8 +35,7 @@
 		<button onclick="startGame()">Start New Game</button>
  	</div>
  	<div class="gameboard">
- 		
-
+ 	
  		<div class="mole-hole">
  			<img class="clickable" src="/img/avocadoHappy.jpeg" alt="avocado"/>
  		</div>
@@ -66,18 +70,23 @@
 
  		<div class="mole-hole">
  			<img class="clickable" src="/img/avocadoHappy.jpeg" alt="avocado"/>
+ 		</div>
+ 		<div>
+ 			<h2>Game Over</h2>
  		</div>
 
 	</div>
+</div>
 
 	<script>
-		var level = 1;
-		var time = 1400;
-		var hits = 0;
-		var count = 0;
-		var misses = 0;
-		var highscore = 0;
-		var score = 0;
+		var level = 1,
+		time = 1000,
+		hits = 0,
+		count = 0,
+		misses = 0,
+		highscore = 0,
+		score = 0,
+		gameLoop = '';
 
 		$('img').click(function(){
 			$(this).hide();
@@ -96,50 +105,51 @@
 			count = (count + 1);
 			misses = count - hits;
 		    $('#misses').html(misses);
+
+		    //adjust player level based on number of hits
+			if (hits <= 10){
+				level = 1;
+			} else if (hits <= 15){
+				level = 2;
+			} else if (hits <= 20){
+				level = 3;
+			} else if (hits > 25){
+				level = 4;
+			}
+			$('#level').html(level);
+
+			//adjust reflex time based on level
+			if (level == 1){
+				time = 1000;
+			} else if (level == 2){
+				time = 800;
+			} else if (level == 3){
+				time = 400;
+			} else if (level == 4){
+				time = 200;
+			}
 				
-		};
+			gameLoop = setTimeout(gamePlay, time);
+		};	
 
 		// set a game duration interval
-		function startGame(){
-			setTimeout(myStopFunction, 30000);
-			var gameTime = setInterval(gamePlay, time);
+		function startGame(){	
+			$('button').hide();
+			gamePlay();
+			setTimeout(stopGame, 5000);
 		}
 
 		// function to stop / reset the timer for game play
-		function myStopFunction() {
-			clearInterval(gameTime);
+		function stopGame() {
+			clearTimeout(gameLoop);
+
+			$('img').hide();
+			$('h2').show();
+			$('button').show();
+
+			// show game over message
+			
 		}
-
-
-		
-
-		// adjust player level based on number of hits
-		// if (hits == 10){
-		// 	level = 2;
-		// } else if (hits == 15){
-		// 	level = 3;
-		// } else if (hits == 20){
-		// 	level = 4;
-		// } else if (hits == 25){
-		// 	level = 5;
-		// }
-
-		// adjust reflex time based on level
-		// if (level == 2){
-		// 	time = 1200;
-		// } else if (level == 3){
-		// 	time = 900;
-		// } else if (level == 4){
-		// 	time = 700;
-		// } else if (level > 5){
-		// 	time = 400;
-		// }
-
-		
-
-
-
-
 
 
 	</script>
