whack background changes

--- a/public/whack.html
+++ b/public/whack.html
@@ -18,22 +18,24 @@
 <body>
 
 	<h1>Guac - a - mole</h1>
-
-	<div id="buttonDiv">
-		<h3>Time:</h3>
-		<div id="clock">0</div>
-		<h3>High Score</h3>
-		<div class="scorebox" id="highscore">0</div>
-		<h3>Score</h3>
-		<div class="scorebox" id="score">0</div>
-		<h3>Level</h3>
-		<div class="scorebox" id="level">0</div>
-		<h3>Hits</h3>
-		<div class="scorebox" id="hits">0</div>
-		<h3>Misses</h3>
-		<div class="scorebox" id="misses">0</div>
-		<button onclick="startGame()">Start New Game</button>
- 	</div>
+	<div id="shade">
+		<div id="buttonDiv">
+			<h3>Time:</h3>
+			<div class="scorebox" id="clock">0</div>
+			<h3>High Score</h3>
+			<div class="scorebox" id="highscore">0</div>
+			<h3>Score</h3>
+			<div class="scorebox" id="score">0</div>
+			<h3>Level</h3>
+			<div class="scorebox" id="level">0</div>
+			<h3>Hits</h3>
+			<div class="scorebox" id="hits">0</div>
+			<h3>Misses</h3>
+			<div class="scorebox" id="misses">0</div>
+			<button onclick="startGame()">Start New Game</button>
+			
+	 	</div>
+	 </div>
  	<div class="gameboard">
  	
  		<div class="mole-hole">
@@ -71,10 +73,10 @@
  		<div class="mole-hole">
  			<img class="clickable" src="/img/avocadoHappy.jpeg" alt="avocado"/>
  		</div>
+
  		<div>
  			<h2>Game Over</h2>
  		</div>
-
 	</div>
 
 
@@ -87,7 +89,10 @@
 		highscore = 0,
 		score = 0,
 		gameLoop = '';
-		clock = 3000;
+		setTime = 30;
+		clock = 30000;
+		var backgroundMusic  = document.createElement('audio');
+		backgroundMusic.setAttribute("src", "../sounds/spanish.wav")
 
 		$('img').click(function(){
 			$(this).hide();
@@ -105,7 +110,20 @@
 			$(holes[rand]).children().fadeIn();
 			misses = count - hits;
 			count = (count + 1);
+			setTime = (setTime - 1);
+			if (setTime == 0){
+				stopGame();
+			} else if (setTime > 0){
+		    	$('#clock').html(setTime);
+		    }	
+			// } else if (setTime < 0){
+			// 	()
+			// }
+
+			clock = setTime;
 		    $('#misses').html(misses);
+
+
 		
 		    //adjust player level based on number of hits
 			if (hits <= 10){
@@ -137,9 +155,10 @@
 		function startGame(){
 			resetBoard();
 			$('button').hide();
+			backgroundMusic.play()
 			$('h2').hide();
 			gamePlay();
-			setTimeout(stopGame, clock);
+			setTimeout(stopGame, 30000);
 		}
 
 		// function to stop / reset the timer for game play
@@ -162,10 +181,12 @@
 			count = 0;
 			misses = 0;
 			score = 0;
+			setTime = 30;
 		}
 
 
 	</script>
+
 
 </body>
 </html>
